[gd_scene load_steps=6 format=3 uid="uid://u2ti1vemexec"]

[ext_resource type="Script" uid="uid://bwlrk6cw7vyrc" path="res://plant_controller.gd" id="1_m0e4l"]
[ext_resource type="Texture2D" uid="uid://fibb4388ip6t" path="res://assets/sprites/shadow.png" id="2_pk0tu"]
[ext_resource type="Texture2D" uid="uid://2468nx1lcify" path="res://assets/sprites/Sprite sheet Flowers.png" id="2_x6krw"]
[ext_resource type="SpriteFrames" uid="uid://bma833e0dbchm" path="res://plants/plant01.tres" id="3_pk0tu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3dxm6"]
size = Vector2(66, 92)

[node name="PlantPot" type="Node2D" groups=["Pots"]]
script = ExtResource("1_m0e4l")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 29)
scale = Vector2(2.77436, 1.41298)
texture = ExtResource("2_pk0tu")

[node name="Pot" type="Sprite2D" parent="."]
scale = Vector2(5, 5)
texture = ExtResource("2_x6krw")
region_enabled = true
region_rect = Rect2(384, 34, 15, 16)

[node name="Plant" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(3, -87)
scale = Vector2(5, 5)
sprite_frames = ExtResource("3_pk0tu")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -15)
shape = SubResource("RectangleShape2D_3dxm6")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
